[gd_scene load_steps=7 format=3 uid="uid://dcmwedavamcvl"]

[ext_resource type="Theme" uid="uid://cr5645fhno242" path="res://Resource/UITheme.tres" id="1_76krm"]
[ext_resource type="Texture2D" uid="uid://cpgsf8udt415i" path="res://Resource/Img/17.png" id="1_taakf"]
[ext_resource type="PackedScene" uid="uid://cojwyjeq1a47n" path="res://Scene/WidgetScene/title_bar.tscn" id="2_8qm17"]
[ext_resource type="Script" path="res://Script/VisualScenes/select_scene.gd" id="2_myfy1"]
[ext_resource type="Texture2D" uid="uid://bcyr7iplpdln4" path="res://Resource/Icons/play-fill_lowdpi.svg" id="6_esfl0"]

[sub_resource type="LabelSettings" id="LabelSettings_l0kkl"]
font_size = 50

[node name="select_scene1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76krm")
script = ExtResource("2_myfy1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_taakf")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title_bar" parent="VBoxContainer" instance=ExtResource("2_8qm17")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MscList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource("1_76krm")
allow_search = false

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SongName" type="Label" parent="VBoxContainer/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
text = "歌曲名"
label_settings = SubResource("LabelSettings_l0kkl")

[node name="SongInfoLabel" type="Label" parent="VBoxContainer/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="LevelBar" type="TabBar" parent="VBoxContainer/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
tab_count = 3
tab_0/title = "简单"
tab_1/title = "中等"
tab_2/title = "困难"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "最高分  "

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("6_esfl0")

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/MscList" to="." method="_on_msc_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
